syntax = "proto3";

package article;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service Article {
    rpc FindArticles (ArticlesRequest) returns (ArticlesResponse) {
        option (google.api.http) = {
            get: "/v1/articles"
        };
    }
    rpc FindArticle (ArticleRequest) returns (ArticleResponse) {
        option (google.api.http) = {
            get: "/v1/articles/{articleId}"
        };
    }
    rpc FindArticleContent (ArticleRequest) returns (ArticleResponse) {
        option (google.api.http) = {
            get: "/v1/articles/{articleId}/content"
        };
    }
    rpc StoreEditor (StoreEditorRequest) returns (StoreEditorResponse) {
        option (google.api.http) = {
            post: "/v1/editors"
            body: "editor"
        };
    }
}

message ArticlesRequest {}

message ArticlesResponse { repeated ArticleResponse articles = 1; }

message ArticleRequest { string articleId = 1; }

message ArticleResponse {
    string articleId = 1;
    string articleName = 2;
    string editor = 3;
    google.protobuf.Timestamp lastModified = 4;
	string thumbnail = 5;
	string description = 6;
    google.protobuf.Struct content = 7;
    string editorIcon = 8;
}


message StoreEditorRequest {
    Editor editor = 1;
}

message Editor {
    int32 editorId = 1;
    string editorName = 2;
    string editorIcon = 3;
}

message StoreEditorResponse {
    Editor editor = 1;
}