syntax = "proto3";

package article;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service ArticleService {
    rpc FindArticles (Articles) returns (Articles) {
        option (google.api.http) = {
            get: "/v1/articles"
        };
    }
    rpc FindArticle (Article) returns (Article) {
        option (google.api.http) = {
            get: "/v1/articles/{articleId}"
        };
    }
    rpc FindArticleContent (Article) returns (Article) {
        option (google.api.http) = {
            get: "/v1/articles/{articleId}/content"
        };
    }
    rpc StoreArticle (StoreArticleRequest) returns (StoreArticleResponse) {
        option (google.api.http) = {
            post: "/v1/articles"
            body: "article"
        };
    }
    rpc StoreEditor (StoreEditorRequest) returns (StoreEditorResponse) {
        option (google.api.http) = {
            post: "/v1/editors"
            body: "editor"
        };
    }
}

message Articles {
    repeated Article articles = 1;
}

message Article {
    string articleId = 1;
    ArticleOverview overview = 2;
    google.protobuf.Struct content = 7;
}

message ArticleOverview {
    string articleName = 1;
    string description = 2;
    Editor editor = 3;
    google.protobuf.Timestamp lastModified = 4;
    string thumbnail = 5;
}

message Editor {
    int32 editorId = 1;
    string editorName = 2;
    string editorIcon = 3;
}

message StoreArticleRequest { Article article = 1; }

message StoreArticleResponse { string message = 1; }

message StoreEditorRequest { Editor editor = 1; }

message StoreEditorResponse { Editor editor = 1; }
